[package]
name = "paho-mqtt"
version = "0.14.0-pre.0"
edition = "2021"
rust-version = "1.76"
authors = ["Frank Pagliughi <fpagliughi@mindspring.com>"]
homepage = "https://github.com/eclipse/paho.mqtt.rust"
repository = "https://github.com/eclipse/paho.mqtt.rust"
keywords = [ "MQTT", "IoT", "Paho", "messaging" ]
license = "EPL-2.0"
readme = "README.md"
description = """
The Official Eclipse Paho MQTT Rust Client Library.
This is a wrapper around the Paho C library.
"""

[features]
default = ["bundled", "ssl"]
bundled = ["paho-mqtt-sys/bundled"]
build_bindgen = ["paho-mqtt-sys/build_bindgen"]
ssl = ["paho-mqtt-sys/ssl"]
vendored-ssl = ["paho-mqtt-sys/vendored-ssl"]

[dependencies]
paho-mqtt-sys = { version = "0.11", path = "paho-mqtt-sys", default-features=false }
libc = "0.2"
futures = "0.3"
futures-timer = "3.0"
async-channel = "2.5"
crossbeam-channel = "0.5"
log = "0.4"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"], optional = true }

[dev-dependencies]
env_logger = "0.11"
toml = "0.9"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
futures-util = "0.3"
# pin at version 3.4.1 to remain compatible with MSRV 1.76, version 3.4.2 has an MSRV of 1.85
async-lock = "=3.4.1"
ctrlc = "3.2"
smol = "2.0"

[[example]]
name = "tokio_event_subscribe_v5"
required-features = ["tokio"]

[[example]]
name = "tokio_publish"
required-features = ["tokio"]

